# detonation-chamber

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md
.github/workflows/: ci.yml
daas/: Cargo.toml  NOTICE  README.md  config.toml
daas/src/: agent.rs  api.rs  behavioral.rs  canary.rs  config.rs  firecracker.rs  honeypot.rs  lib.rs  llm.rs  main.rs  monitor.rs  orchestrator.rs  payment.rs  pi_agent.rs  report.rs  tests_e2e.rs  tools.rs  traffic.rs  types.rs
daas/tests/: firecracker_e2e.rs
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  DETECTION_LAYERS.md  DEVELOPMENT.md  PI_INTEGRATION.md
pi-extension/: index.ts  package.json
src/: completions.rs  main.rs
tests/: cli_tests.rs
